--- a/Resultados.ipynb
+++ b/Resultados.ipynb
@@ -178,18 +178,13 @@
     "from sklearn.naive_bayes import GaussianNB\n",
     "gnb = GaussianNB()\n",
     "data = jpeg[['epm', 'gwm', 'msim']].values\n",
-    "target = jpeg['taxa'].values\n",
-    "target = (target.astype('int')/10) - 2\n",
+    "target = jpeg['mos'].values\n",
+    "\n",
     "y_pred = []\n",
     "    \n",
     "for i in range(len(target)):\n",
     "    y_pred.append(gnb.fit(np.delete(data, i, 0), np.delete(target, i, 0)).predict([data[i], data[i]])[0])\n",
-    "    \n",
-    "for i in range(len(y_pred)):\n",
-    "    if y_pred[i] == 8:\n",
-    "        y_pred[i] = 3.0\n",
-    "    if target[i] == 8:\n",
-    "        target[i] = 3.0\n",
+    "\n",
     "print ('Acuracia:')        \n",
     "accuracy_score(y_pred,target)\n",
     "\n"
@@ -451,36 +446,10 @@
     "tpr_gwm, fpr_gwm, s_index_gwm, gwm_values = get_ks_plot('gwm')\n",
     "tpr_epm, fpr_epm, s_index_epm, epm_values = get_ks_plot('epm')\n",
     "tpr_msim, fpr_msim, s_index_msim, msim_values = get_ks_plot('msim')\n",
-    "#tpr_rede, fpr_rede, s_index_rede, rede_values = get_ks_plot('rede')\n",
+    "tpr_rede, fpr_rede, s_index_rede, rede_values = get_ks_plot('rede')\n",
     "print (epm_values[s_index_epm], tpr_epm[s_index_epm], fpr_epm[s_index_epm])\n",
     "print (gwm_values[s_index_gwm], tpr_gwm[s_index_gwm], fpr_gwm[s_index_gwm])\n",
-    "print (msim_values[s_index_msim], tpr_msim[s_index_msim], fpr_msim[s_index_msim])\n",
-    "\n",
-    "from sklearn.naive_bayes import GaussianNB\n",
-    "gnb = GaussianNB()\n",
-    "data = jpeg[['epm', 'gwm', 'msim']].values\n",
-    "target = jpeg['taxa'].values\n",
-    "target = (target.astype('int')/10) - 2\n",
-    "y_pred = []\n",
-    "    \n",
-    "for i in range(len(target)):\n",
-    "    y_pred.append(gnb.fit(np.delete(data, i, 0), np.delete(target, i, 0)).predict([data[i], data[i]])[0])\n",
-    "    \n",
-    "for i in range(len(y_pred)):\n",
-    "    if y_pred[i] == 8:\n",
-    "        y_pred[i] = 3.0\n",
-    "    if target[i] == 8:\n",
-    "        target[i] = 3.0\n",
-    "        \n",
-    "jpeg['rede'] = y_pred\n",
-    "jpeg['mos'] = target\n",
-    "\n",
-    "print (rede_values[s_index_rede], tpr_rede[s_index_rede], fpr_rede[s_index_rede])\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "print (msim_values[s_index_msim], tpr_msim[s_index_msim], fpr_msim[s_index_msim])"
    ]
   },
   {
